Update CORS settings and permit all requests temporarily
Temporarily allow all requests to test CORS and update CORS configuration for allowed origins and methods.